--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "start:prod": "node dist/src/main.js"
   },
   "dependencies": {
-    "@google-cloud/bigquery": "^6.0.1",
     "@nestjs-modules/ioredis": "^1.0.0",
     "@nestjs/axios": "0.0.8",
     "@nestjs/bull": "^0.5.5",
@@ -41,7 +40,7 @@
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.5.1",
     "@sentry/tracing": "^7.4.1",
-    "@zoralabs/zdk": "^2.1.3",
+    "aws-sdk": "^2.1182.0",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.4",
     "class-transformer": "^0.5.1",
@@ -49,14 +48,17 @@
     "eth-price": "^0.1.4",
     "ethereum-block-by-date": "^1.4.5",
     "etherscan-api": "^10.0.9",
+    "etherspot": "^1.35.0",
     "follower-count": "^0.5.0",
     "ioredis": "^4.28.5",
+    "linq": "^4.0.0",
     "moralis": "^1.8.1",
+    "multer": "^1.4.5-lts.1",
+    "nest-aws-sdk": "^2.1.0",
     "oraq": "^0.2.4",
     "papaparse": "^5.3.2",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
-    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
