--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@nestjs-modules/ioredis": "^1.0.0",
-    "@nestjs/axios": "0.0.8",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.5.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
