--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start:prod": "node dist/src/main.js"
   },
   "dependencies": {
+    "@maticnetwork/eth-decoder": "^0.0.4",
     "@nestjs-modules/ioredis": "^1.0.0",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.5.5",
@@ -45,13 +46,16 @@
     "bull": "^4.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "eth-log-decoder": "^0.0.1-beta.1",
     "eth-price": "^0.1.4",
     "ethereum-block-by-date": "^1.4.5",
+    "ethers": "^5.6.9",
     "etherscan-api": "^10.0.9",
     "etherspot": "^1.35.0",
     "follower-count": "^0.5.0",
     "ioredis": "^4.28.5",
     "linq": "^4.0.0",
+    "logs-decoder": "^3.1.4",
     "moralis": "^1.8.1",
     "multer": "^1.4.5-lts.1",
     "nest-aws-sdk": "^2.1.0",
