--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/swagger": "^5.2.1",
@@ -61,6 +63,8 @@
     "nest-aws-sdk": "^2.1.0",
     "oraq": "^0.2.4",
     "papaparse": "^5.3.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
     "reflect-metadata": "^0.1.13",
