whitelist settings & info & link generation

--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "eth-log-decoder": "^0.0.1-beta.1",
-    "eth-price": "^0.1.4",
-    "ethereum-block-by-date": "^1.4.5",
     "ethers": "^5.6.9",
     "etherscan-api": "^10.0.9",
     "etherspot": "^1.35.0",
@@ -61,6 +59,7 @@
     "moralis": "^1.8.1",
     "multer": "^1.4.5-lts.1",
     "nest-aws-sdk": "^2.1.0",
+    "nestjs-url-generator": "^1.0.1",
     "oraq": "^0.2.4",
     "papaparse": "^5.3.2",
     "passport": "^0.6.0",
