--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.5.1",
     "@sentry/tracing": "^7.4.1",
+    "@zoralabs/zdk": "^2.1.4",
     "aws-sdk": "^2.1182.0",
     "bcrypt": "^5.0.1",
+    "bn.js": "^5.2.1",
     "bull": "^4.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -55,7 +57,6 @@
     "follower-count": "^0.5.0",
     "ioredis": "^4.28.5",
     "linq": "^4.0.0",
-    "logs-decoder": "^3.1.4",
     "moralis": "^1.8.1",
     "multer": "^1.4.5-lts.1",
     "nest-aws-sdk": "^2.1.0",
