--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "nest-aws-sdk": "^2.1.0",
     "nestjs-url-generator": "^1.0.1",
     "oraq": "^0.2.4",
+    "p-limit": "3.1.0",
     "papaparse": "^5.3.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "postgres": "^3.2.4",
+    "qrate": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
