--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.5.1",
     "@sentry/tracing": "^7.4.1",
+    "@solana/web3.js": "^1.50.1",
     "@zoralabs/zdk": "^2.1.4",
     "aws-sdk": "^2.1182.0",
     "bcrypt": "^5.0.1",
@@ -61,6 +62,7 @@
     "multer": "^1.4.5-lts.1",
     "nest-aws-sdk": "^2.1.0",
     "nestjs-url-generator": "^1.0.1",
+    "opensea-scraper": "^6.5.1",
     "oraq": "^0.2.4",
     "p-limit": "3.1.0",
     "papaparse": "^5.3.2",
