--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "discord.js": "^14.1.2",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eth-log-decoder": "^0.0.1-beta.1",
     "ethers": "^5.6.9",
     "etherscan-api": "^10.0.9",
@@ -88,7 +90,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "cpy-cli": "^4.1.0",
     "eslint": "^8.0.1",
