--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "prisma:generate": "npm run prisma -- generate",
     "prisma:watch": "npm run prisma -- generate -- --watch",
     "prisma:silent-watch": "npm run prisma -- generate -- --watch &",
-    "seed": "ts-node --transpile-only ./prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:prod": "node dist/src/main.js"
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
     "@maticnetwork/eth-decoder": "^0.0.4",
